--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~47.0.9",
+    "expo-graphics": "^2.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-three": "^7.0.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "three": "^0.145.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
