--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "permissions": [
+    "CAMERA_ROLL",
+    "CAMERA"
+  ],
   "dependencies": {
-    "expo": "~47.0.9",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.0.10",
+    "expo": "~47.0.13",
+    "expo-gl": "^12.0.1",
     "expo-graphics": "^2.0.0",
+    "expo-permissions": "^14.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-three": "^7.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-three-fiber": "^6.0.13",
     "three": "^0.145.0"
   },
   "devDependencies": {
