--- a/app.json
+++ b/app.json
@@ -6,6 +6,13 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "permissions": [
+      "CAMERA"
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
