--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.0.10",
     "expo": "~47.0.13",
+    "expo-camera": "~13.1.0",
     "expo-gl": "^12.0.1",
     "expo-graphics": "^2.0.0",
     "expo-permissions": "^14.0.0",
+    "expo-sensors": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-three": "^7.0.0",
     "react": "18.1.0",
