--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "CAMERA"
   ],
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
     "expo": "~47.0.13",
     "expo-camera": "~13.1.0",
     "expo-gl": "^12.0.1",
