--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~47.0.13",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-camera": "~13.1.0",
     "expo-gl": "^12.0.1",
     "expo-graphics": "^2.0.0",
